# Stage

./: .gitignore  CMakeLists.txt  README.md
docsrc/: stage.dox
libstage/: CMakeLists.txt  model.cc  stage.hh  world.cc
protobuf/: epuck.proto
worlds/: CMakeLists.txt
worlds/epuck/: CMakeLists.txt  ConsequenceEngine7.1.world  CorridorComparison.world  EstimatePredict.world  Follow.world  README  cave.world  epuck.cc  epuck.hh  epuck.inc  epuck.world  epuck22.world  epuck32.world  epuckAvoidance.cc  epuckBase.cc  epuckBase.hh  epuckFollow.cc  first.world  flock.world  food.inc  map.inc  myepuck.inc  proximity_data.csv  single.world
worlds/epuck/ctrl/: epuckAvoidance.cc  epuckBase.cc  epuckBase.hh  epuckFlock.cc  epuckFollow.cc  epuckMoveTo.cc  epuckStop.cc  epuckTurnLeft.cc
