SET(epuckAvoidanceSrcs ctrl/epuckAvoidance.cc)
set_source_files_properties( ${epuckAvoidanceSrcs} PROPERTIES COMPILE_FLAGS "${FLTK_CFLAGS}" )
ADD_LIBRARY( epuckAvoidance MODULE ${epuckAvoidanceSrcs} )
TARGET_LINK_LIBRARIES( epuckAvoidance stage )
SET_TARGET_PROPERTIES( epuckAvoidance PROPERTIES PREFIX "" )
INSTALL( TARGETS epuckAvoidance DESTINATION ${PROJECT_PLUGIN_DIR})

SET(epuckFollowSrcs ctrl/epuckFollow.cc)
set_source_files_properties( ${epuckFollowSrcs} PROPERTIES COMPILE_FLAGS "${FLTK_CFLAGS}" )
ADD_LIBRARY( epuckFollow MODULE ${epuckFollowSrcs} )
TARGET_LINK_LIBRARIES( epuckFollow stage )
SET_TARGET_PROPERTIES( epuckFollow PROPERTIES PREFIX "" )
INSTALL( TARGETS epuckFollow DESTINATION ${PROJECT_PLUGIN_DIR})
