SET(epuckAvoidanceSrcs ctrl/epuckAvoidance.cc)
set_source_files_properties( ${epuckAvoidanceSrcs} PROPERTIES COMPILE_FLAGS "${FLTK_CFLAGS}" )
ADD_LIBRARY( epuckAvoidance MODULE ${epuckAvoidanceSrcs} )
TARGET_LINK_LIBRARIES( epuckAvoidance stage )
SET_TARGET_PROPERTIES( epuckAvoidance PROPERTIES PREFIX "" )
INSTALL( TARGETS epuckAvoidance DESTINATION ${PROJECT_PLUGIN_DIR})

SET(epuckFollowSrcs ctrl/epuckFollow.cc)
set_source_files_properties( ${epuckFollowSrcs} PROPERTIES COMPILE_FLAGS "${FLTK_CFLAGS}" )
ADD_LIBRARY( epuckFollow MODULE ${epuckFollowSrcs} )
TARGET_LINK_LIBRARIES( epuckFollow stage )
SET_TARGET_PROPERTIES( epuckFollow PROPERTIES PREFIX "" )
INSTALL( TARGETS epuckFollow DESTINATION ${PROJECT_PLUGIN_DIR})

SET(epuckMoveToSrcs ctrl/epuckMoveTo.cc)
set_source_files_properties( ${epuckMoveToSrcs} PROPERTIES COMPILE_FLAGS "${FLTK_CFLAGS}" )
ADD_LIBRARY( epuckMoveTo MODULE ${epuckMoveToSrcs} )
TARGET_LINK_LIBRARIES( epuckMoveTo stage )
SET_TARGET_PROPERTIES( epuckMoveTo PROPERTIES PREFIX "" )
INSTALL( TARGETS epuckMoveTo DESTINATION ${PROJECT_PLUGIN_DIR})

SET(epuckTurnLeftSrcs ctrl/epuckTurnLeft.cc)
set_source_files_properties( ${epuckTurnLeftSrcs} PROPERTIES COMPILE_FLAGS "${FLTK_CFLAGS}" )
ADD_LIBRARY( epuckTurnLeft MODULE ${epuckTurnLeftSrcs} )
TARGET_LINK_LIBRARIES( epuckTurnLeft stage )
SET_TARGET_PROPERTIES( epuckTurnLeft PROPERTIES PREFIX "" )
INSTALL( TARGETS epuckTurnLeft DESTINATION ${PROJECT_PLUGIN_DIR})

SET(epuckStopSrcs ctrl/epuckStop.cc)
set_source_files_properties( ${epuckStopSrcs} PROPERTIES COMPILE_FLAGS "${FLTK_CFLAGS}" )
ADD_LIBRARY( epuckStop MODULE ${epuckStopSrcs} )
TARGET_LINK_LIBRARIES( epuckStop stage )
SET_TARGET_PROPERTIES( epuckStop PROPERTIES PREFIX "" )
INSTALL( TARGETS epuckStop DESTINATION ${PROJECT_PLUGIN_DIR})
